:bug: fix mobile display overflow issue, :pencil: Update homepage content and links

--- a/site/style.css
+++ b/site/style.css
@@ -40,6 +40,7 @@ article {
     min-height:100%;
     background:linear-gradient(#000000, #2A4B57 80%, #000000);
     background-size:cover;
+    padding-bottom: 240px;
 }
 
 #tutor_list{
@@ -87,6 +88,7 @@ article {
 
 #tutor_left img{
     display: inline;
+    margin: auto;
 }
 
 #tutor_description{
@@ -577,10 +579,10 @@ footer p, #contactform p{
     }
 
     #left_side, #right_side {
-        padding: 20px; /* Reduce padding */
+        padding: 20px;
     }
     #hero {
-        flex-direction: column; /* Stack elements vertically */
+        flex-direction: column;
         align-items: center;
     }
  
